# hiringbot

./: README.md  pyproject.toml  req.txt
.streamlit/: secrets.toml
back_end/: bot.py  config.py  smith.py  templates.py
front_end/: main.py
front_end/css/: main.css
front_end/pages/: exam_portal.py  feed_back.py  score_dashboard.py
