[tool.poetry]
name = "pg_agi"
version = "0.1.0"
description = "AI Hiring Assistant"
authors = ["Rahul A <rahul72372003@gmail.com>"]

# ✅ This disables packaging mode (no need for __init__.py or packages folder)
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.45.1"
langchain = "^0.3.25"
openai = "^1.68.2"
python-dotenv = "^1.0.0"
langchain-community = "^0.3.24"
langgraph = "^0.4.8"
fastapi = "^0.115.12"
langchain-groq = "^0.3.2"
langchain-openai = "^0.3.21"
email-validator = "^2.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
